# WorldBox

./: CMakeLists.txt  bandit_behavior.cpp  bandit_behavior.h  civilian_behavior.cpp  human_behavior.cpp  main.cpp  npc.h  settlement.h  warrior_behavior.cpp  warrior_behavior.h  world.cpp  world.h
Project/: CMakeLists.txt
Project/app/: CMakeLists.txt  main.cpp
Project/cmake/: CMakeLists.txt
Project/include/: world.h
Project/include/environment/: CMakeLists.txt  Meteor.h  Meteorite.h  Plant.h  WorldObject.h  settlement.h  world.h
Project/include/npc/: Animal.h  CMakeLists.txt  captain_behavior.h  civilian_behavior.h  human_behavior.h  npc.h  warrior_behavior.h
Project/include/terrain/: CMakeLists.txt  terrain.h
Project/src/: Animal.cpp  CMakeLists.txt  Meteorite.cpp  Plant.cpp  bandit_behavior.cpp  captain_behavior.cpp  civilian_behavior.cpp  human_behavior.cpp  meteorite_methods.cpp  warrior_behavior.cpp  world.cpp
Project/src/terrain/: CMakeLists.txt  terrain.cpp
Project/tests/: CMakeLists.txt  basic_test.cpp
WorldBox-main 4/: README.md
WorldBox-main 4/Project/include/: CMakeLists.txt
WorldBox-main 4/Project/src/: CMakeLists.txt  Plant.cpp  bandit_behavior.cpp
